--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
-    "chart.js": "^4.0.1",
-    "ng2-charts": "^4.0.2",
+    "chart.js": "^4.1.2",
+    "ng2-charts": "^4.1.1",
     "rxjs": "~7.5.0",
+    "sweetalert2": "^11.6.16",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
